--- a/src/App.css
+++ b/src/App.css
@@ -30,5 +30,5 @@ footer {
   color: white;
 }
 
-
+/* color verde rgb(48,76,25) amarelo rgb(216,184,49) azul rgb(1,178,170) vermelho rgb(206,60,11) */
 
